# c-ares

./: .bazelrc  BUILD.bazel  MODULE.bazel
include/: ares.h  ares_build.h  ares_config.h
src/lib/: ares_config.h  ares_config_linux.h  ares_config_macos.h
