cc_library(
    name = "ares",
    srcs = glob([
        "src/lib/**/*.c",
        "src/lib/**/*.h",
    ]),
    hdrs = [
        "include/ares.h",
        "include/ares_build.h",
        "include/ares_build_linux.h",
        "include/ares_build_windows.h",
        "include/ares_dns.h",
        "include/ares_dns_record.h",
        "include/ares_nameser.h",
        "include/ares_version.h",
    ],
    defines = ["CARES_STATICLIB"],
    includes = [
        "include",
        "src/lib",
        "src/lib/include",
    ],
    linkopts = select({
        "@platforms//os:windows": [
            "-defaultlib:ws2_32.lib",
            "-defaultlib:Iphlpapi.lib",
            "-defaultlib:advapi32.lib",
        ],
        "//conditions:default": [],
    }),
    local_defines = ["HAVE_CONFIG_H"],
    strip_include_prefix = "include",
    visibility = [
        "//visibility:public",
    ],
)

cc_library(
    name = "ares_getopt",
    srcs = ["src/tools/ares_getopt.c"],
    hdrs = ["src/tools/ares_getopt.h"],
    strip_include_prefix = "src/tools",
)

cc_binary(
    name = "ahost",
    srcs = ["src/tools/ahost.c"],
    local_defines = ["HAVE_CONFIG_H"],
    deps = [
        ":ares",
        ":ares_getopt",
    ],
)

cc_binary(
    name = "adig",
    srcs = ["src/tools/adig.c"],
    local_defines = ["HAVE_CONFIG_H"],
    deps = [
        ":ares",
        ":ares_getopt",
    ],
)
